Fixes for some incorrectly reported results in the dispersion GUI tutorial in the manual.
The non-clustered results had been incorrectly copied from the log messages.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -3434,70 +3434,70 @@ The text for residues 59 to 67 should be:
 \begin{lstlisting}[basicstyle=\ttfamily \tiny,language=relax_log,numbers=none]
 The spin cluster [':59@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   1886.14016    1890.14016    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   32.15110      42.15110      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   32.61624      42.61624      
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   1577.42286    1581.42286    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   31.48415      41.48415      
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   31.84758      41.84758      
 The model from the data pipe 'CR72 - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':60@N'].
-# Data pipe                                            Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)         2                 31                   3240.49312    3244.49312    
+# Data pipe                                       Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)    2                 30                   2647.97449    2651.97449    
 The model from the data pipe 'No Rex - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':61@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2           Criterion      
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   17285.66217    17289.66217    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   95.95234       105.95234      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   92.56628       102.56628      
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   15019.24382    15023.24382    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   77.50622       87.50622       
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   74.73334       84.73334       
 The model from the data pipe 'NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':62@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2         Criterion    
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   851.74421    855.74421    
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   31.48142     41.48142     
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   722.91592    726.91592    
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   30.11618     40.11618     
 The model from the data pipe 'NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':63@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   6452.87623    6456.87623    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   61.70881      71.70881      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   63.14294      73.14294      
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   5455.72135    5459.72135    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   58.56731      68.56731      
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   59.90738      69.90738      
 The model from the data pipe 'CR72 - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':64@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2           Criterion      
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   16028.66123    16032.66123    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   29.25973       39.25973       
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   30.24274       40.24274       
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   13736.91051    13740.91051    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   28.66223       38.66223       
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   29.54008       39.54008       
 The model from the data pipe 'CR72 - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':65@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   2997.14849    3001.14849    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   37.54956      47.54956      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   38.74910      48.74910      
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   2498.29408    2502.29408    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   35.13518      45.13518      
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   36.17043      46.17043      
 The model from the data pipe 'CR72 - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':66@N'].
-# Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2          Criterion     
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   1129.05612    1133.05612    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   15.81233      25.81233      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   15.79713      25.79713      
-The model from the data pipe 'NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
+# Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2         Criterion    
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   962.74016    966.74016    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   15.02929     25.02929     
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   15.08439     25.08439     
+The model from the data pipe 'CR72 - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 
 
 The spin cluster [':67@N'].
 # Data pipe                                                        Num_params_(k)    Num_data_sets_(n)    Chi2           Criterion      
-No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 31                   18252.93240    18256.93240    
-CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 31                   120.14948      130.14948      
-NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 31                   113.41542      123.41542      
+No Rex - relax_disp (Mon Feb 17 18:00:16 2014)                     2                 30                   16773.20431    16777.20431    
+CR72 - relax_disp (Mon Feb 17 18:00:16 2014)                       5                 30                   118.17857      128.17857      
+NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)    5                 30                   111.56710      121.56710      
 The model from the data pipe 'NS CPMG 2-site expanded - relax_disp (Mon Feb 17 18:00:16 2014)' has been selected.
 \end{lstlisting}
 
@@ -3522,14 +3522,15 @@ Analysis        & Parameter     & Data set      & Chi-squared   & AIC value \\
 
 \midrule
 
-Non-clustered   & 40            & 248           & 418.011       & 498.011 \\
+Non-clustered   & 40            & 240           & 388.966       & 468.966 \\
 Clustered       & 26            & 240           & 510.966       & 562.966 \\
 
 \bottomrule
 \end{tabular}
 \end{center}
 
-As the Akaike Information Criterion value is much less for the non-clustered analysis, then this result is the most parsimonious (the closest to Occam's razor as defined in frequentist statistics).
+The Akaike Information Criterion value is much less for the non-clustered analysis.
+Therefore this result is the most parsimonious -- the result closest to Occam's razor as defined by frequentist statistics.
 Therefore the non-clustered analysis is a statistically better description of the experimental data for this set of residues.
-For a different spin cluster, this result might be different.
+For a different cluster of spins, the result may be different.
 If the assumptions of the same dynamics for all spins (both populations $\pA$ and exchange rates $\kex$) is correct, the results of the clustered analysis are nevertheless useful as it can decrease parameter uncertainty.
